--- a/src/lib/i18n/locales/ar-BH/translation.json
+++ b/src/lib/i18n/locales/ar-BH/translation.json
@@ -73,7 +73,8 @@
 	"Back": "خلف",
 	"Bad Response": "استجابة خطاء",
 	"Bad words File": "",
-	"Bad words Template": "",
+ 	"Bad words filter settings updated successfully": "",
+ 	"Bad words Template": "",
 	"Banners": "لافتات",
 	"Base Model (From)": "النموذج الأساسي (من)",
 	"Batch Size (num_batch)": "",
@@ -270,7 +271,7 @@
 	"File not found.": "لم يتم العثور على الملف.",
 	"Filter": "",
 	"Filter is now globally disabled": "",
-	"Bad words filter settings updated successfully": "",
+	"Filter is now globally enabled": "",
 	"Filters": "",
 	"Fingerprint spoofing detected: Unable to use initials as avatar. Defaulting to default profile image.": "تم اكتشاف انتحال بصمة الإصبع: غير قادر على استخدام الأحرف الأولى كصورة رمزية. الافتراضي لصورة الملف الشخصي الافتراضية.",
 	"Fluidly stream large external response chunks": "دفق قطع الاستجابة الخارجية الكبيرة بسلاسة",
@@ -467,6 +468,7 @@
 	"Remove Model": "حذف الموديل",
 	"Rename": "إعادة تسمية",
 	"Repeat Last N": "N كرر آخر",
+	"Replace bad words Words": "",
 	"Request Mode": "وضع الطلب",
 	"Reranking Model": "إعادة تقييم النموذج",
 	"Reranking model disabled": "تم تعطيل نموذج إعادة الترتيب",
