--- a/src/lib/i18n/locales/bn-BD/translation.json
+++ b/src/lib/i18n/locales/bn-BD/translation.json
@@ -73,7 +73,8 @@
 	"Back": "পেছনে",
 	"Bad Response": "খারাপ প্রতিক্রিয়া",
 	"Bad words File": "",
-	"Bad words Template": "",
+ 	"Bad words filter settings updated successfully": "",
+ 	"Bad words Template": "",
 	"Banners": "ব্যানার",
 	"Base Model (From)": "বেস মডেল (থেকে)",
 	"Batch Size (num_batch)": "",
@@ -467,6 +468,7 @@
 	"Remove Model": "মডেল রিমুভ করুন",
 	"Rename": "রেনেম",
 	"Repeat Last N": "রিপিট Last N",
+	"Replace bad words Words": "",
 	"Request Mode": "রিকোয়েস্ট মোড",
 	"Reranking Model": "রির্যাক্টিং মডেল",
 	"Reranking model disabled": "রির্যাক্টিং মডেল নিষ্ক্রিয় করা",
