--- a/src/lib/i18n/locales/ca-ES/translation.json
+++ b/src/lib/i18n/locales/ca-ES/translation.json
@@ -73,7 +73,8 @@
 	"Back": "Enrere",
 	"Bad Response": "Resposta errònia",
 	"Bad words File": "",
-	"Bad words Template": "",
+ 	"Bad words filter settings updated successfully": "",
+ 	"Bad words Template": "",
 	"Banners": "Banners",
 	"Base Model (From)": "Model base (des de)",
 	"Batch Size (num_batch)": "Mida del lot (num_batch)",
@@ -467,6 +468,7 @@
 	"Remove Model": "Eliminar el model",
 	"Rename": "Canviar el nom",
 	"Repeat Last N": "Repeteix els darrers N",
+	"Replace bad words Words": "",
 	"Request Mode": "Mode de sol·licitud",
 	"Reranking Model": "Model de reavaluació",
 	"Reranking model disabled": "Model de reavaluació desactivat",
