--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -73,7 +73,8 @@
 	"Back": "Zurück",
 	"Bad Response": "Schlechte Antwort",
 	"Bad words File": "",
-	"Bad words Template": "",
+ 	"Bad words filter settings updated successfully": "",
+ 	"Bad words Template": "",
 	"Banners": "Banner",
 	"Base Model (From)": "Basismodell (From)",
 	"Batch Size (num_batch)": "Stapelgröße (num_batch)",
@@ -467,6 +468,7 @@
 	"Remove Model": "Modell entfernen",
 	"Rename": "Umbenennen",
 	"Repeat Last N": "Wiederhole die letzten N",
+	"Replace bad words Words": "",
 	"Request Mode": "Anforderungsmodus",
 	"Reranking Model": "Reranking-Modell",
 	"Reranking model disabled": "Reranking-Modell deaktiviert",
