--- a/src/lib/i18n/locales/fa-IR/translation.json
+++ b/src/lib/i18n/locales/fa-IR/translation.json
@@ -73,7 +73,8 @@
 	"Back": "بازگشت",
 	"Bad Response": "پاسخ خوب نیست",
 	"Bad words File": "",
-	"Bad words Template": "",
+ 	"Bad words filter settings updated successfully": "",
+ 	"Bad words Template": "",
 	"Banners": "بنر",
 	"Base Model (From)": "مدل پایه (از)",
 	"Batch Size (num_batch)": "",
@@ -467,6 +468,7 @@
 	"Remove Model": "حذف مدل",
 	"Rename": "تغییر نام",
 	"Repeat Last N": "Repeat Last N",
+	"Replace bad words Words": "",
 	"Request Mode": "حالت درخواست",
 	"Reranking Model": "مدل ری\u200cشناسی مجدد غیرفعال است",
 	"Reranking model disabled": "مدل ری\u200cشناسی مجدد غیرفعال است",
