--- a/src/lib/i18n/locales/fr-CA/translation.json
+++ b/src/lib/i18n/locales/fr-CA/translation.json
@@ -73,7 +73,8 @@
 	"Back": "Retour en arrière",
 	"Bad Response": "Mauvaise réponse",
 	"Bad words File": "",
-	"Bad words Template": "",
+ 	"Bad words filter settings updated successfully": "",
+ 	"Bad words Template": "",
 	"Banners": "Banniers",
 	"Base Model (From)": "Modèle de base (à partir de)",
 	"Batch Size (num_batch)": "Taille du lot (num_batch)",
@@ -466,6 +467,7 @@
 	"Remove Model": "Retirer le modèle",
 	"Rename": "Renommer",
 	"Repeat Last N": "Répéter les N derniers",
+	"Replace bad words Words": "",
 	"Request Mode": "Mode de Requête",
 	"Reranking Model": "Modèle de ré-ranking",
 	"Reranking model disabled": "Modèle de ré-ranking désactivé",
