--- a/src/lib/i18n/locales/hr-HR/translation.json
+++ b/src/lib/i18n/locales/hr-HR/translation.json
@@ -73,7 +73,8 @@
 	"Back": "Natrag",
 	"Bad Response": "Loš odgovor",
 	"Bad words File": "",
-	"Bad words Template": "",
+ 	"Bad words filter settings updated successfully": "",
+ 	"Bad words Template": "",
 	"Banners": "Baneri",
 	"Base Model (From)": "Osnovni model (Od)",
 	"Batch Size (num_batch)": "",
@@ -467,6 +468,7 @@
 	"Remove Model": "Ukloni model",
 	"Rename": "Preimenuj",
 	"Repeat Last N": "Ponovi zadnjih N",
+	"Replace bad words Words": "",
 	"Request Mode": "Način zahtjeva",
 	"Reranking Model": "Model za ponovno rangiranje",
 	"Reranking model disabled": "Model za ponovno rangiranje onemogućen",
