--- a/src/lib/i18n/locales/it-IT/translation.json
+++ b/src/lib/i18n/locales/it-IT/translation.json
@@ -73,7 +73,8 @@
 	"Back": "Indietro",
 	"Bad Response": "Risposta non valida",
 	"Bad words File": "",
-	"Bad words Template": "",
+ 	"Bad words filter settings updated successfully": "",
+ 	"Bad words Template": "",
 	"Banners": "Banner",
 	"Base Model (From)": "Modello base (da)",
 	"Batch Size (num_batch)": "",
@@ -467,6 +468,7 @@
 	"Remove Model": "Rimuovi modello",
 	"Rename": "Rinomina",
 	"Repeat Last N": "Ripeti ultimi N",
+	"Replace bad words Words": "",
 	"Request Mode": "Modalità richiesta",
 	"Reranking Model": "Modello di riclassificazione",
 	"Reranking model disabled": "Modello di riclassificazione disabilitato",
