--- a/src/lib/i18n/locales/ka-GE/translation.json
+++ b/src/lib/i18n/locales/ka-GE/translation.json
@@ -73,7 +73,8 @@
 	"Back": "უკან",
 	"Bad Response": "ხარვეზი",
 	"Bad words File": "",
-	"Bad words Template": "",
+ 	"Bad words filter settings updated successfully": "",
+ 	"Bad words Template": "",
 	"Banners": "რეკლამა",
 	"Base Model (From)": "საბაზო მოდელი (-დან)",
 	"Batch Size (num_batch)": "",
@@ -467,6 +468,7 @@
 	"Remove Model": "პოპულარობის რაოდენობა",
 	"Rename": "პოპულარობის რაოდენობა",
 	"Repeat Last N": "გაიმეორეთ ბოლო N",
+	"Replace bad words Words": "",
 	"Request Mode": "მოთხოვნის რეჟიმი",
 	"Reranking Model": "რექვექტირება",
 	"Reranking model disabled": "რექვექტირება არაა ჩართული",
