--- a/src/lib/i18n/locales/lt-LT/translation.json
+++ b/src/lib/i18n/locales/lt-LT/translation.json
@@ -73,7 +73,8 @@
 	"Back": "Atgal",
 	"Bad Response": "Neteisingas atsakymas",
 	"Bad words File": "",
-	"Bad words Template": "",
+ 	"Bad words filter settings updated successfully": "",
+ 	"Bad words Template": "",
 	"Banners": "",
 	"Base Model (From)": "",
 	"Batch Size (num_batch)": "",
@@ -467,6 +468,7 @@
 	"Remove Model": "Pašalinti modelį",
 	"Rename": "Pervadinti",
 	"Repeat Last N": "Pakartoti paskutinius N",
+	"Replace bad words Words": "",
 	"Request Mode": "Užklausos rėžimas",
 	"Reranking Model": "Reranking modelis",
 	"Reranking model disabled": "Reranking modelis neleidžiamas",
