--- a/src/lib/i18n/locales/pt-BR/translation.json
+++ b/src/lib/i18n/locales/pt-BR/translation.json
@@ -73,7 +73,8 @@
 	"Back": "Voltar",
 	"Bad Response": "Resposta ruim",
 	"Bad words File": "",
-	"Bad words Template": "",
+ 	"Bad words filter settings updated successfully": "",
+ 	"Bad words Template": "",
 	"Banners": "Banners",
 	"Base Model (From)": "Modelo Base (De)",
 	"Batch Size (num_batch)": "",
@@ -467,6 +468,7 @@
 	"Remove Model": "Remover Modelo",
 	"Rename": "Renomear",
 	"Repeat Last N": "Repetir Últimos N",
+	"Replace bad words Words": "",
 	"Request Mode": "Modo de Solicitação",
 	"Reranking Model": "Modelo de Reranking",
 	"Reranking model disabled": "Modelo de Reranking desativado",
