--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -73,7 +73,8 @@
 	"Back": "Назад",
 	"Bad Response": "Недопустимый ответ",
 	"Bad words File": "",
-	"Bad words Template": "",
+ 	"Bad words filter settings updated successfully": "",
+ 	"Bad words Template": "",
 	"Banners": "Баннеры",
 	"Base Model (From)": "Базовая модель (от)",
 	"Batch Size (num_batch)": "",
@@ -467,6 +468,7 @@
 	"Remove Model": "Удалить модель",
 	"Rename": "Переименовать",
 	"Repeat Last N": "Повторить последние N",
+	"Replace bad words Words": "",
 	"Request Mode": "Режим запроса",
 	"Reranking Model": "Reranking модель",
 	"Reranking model disabled": "Модель реранжирования отключена",
