--- a/src/lib/i18n/locales/tk-TM/transaltion.json
+++ b/src/lib/i18n/locales/tk-TM/transaltion.json
@@ -64,7 +64,8 @@
 	"Back": "Yzyna",
 	"Bad Response": "Erbet Jogap",
 	"Bad words File": "",
-	"Bad words Template": "",
+ 	"Bad words filter settings updated successfully": "",
+ 	"Bad words Template": "",
 	"Banners": "Bannerler",
 	"Base Model (From)": "Esasy Model (Kimden)",
 	"before": "öň",
