--- a/src/lib/i18n/locales/uk-UA/translation.json
+++ b/src/lib/i18n/locales/uk-UA/translation.json
@@ -73,7 +73,8 @@
 	"Back": "Назад",
 	"Bad Response": "Неправильна відповідь",
 	"Bad words File": "",
-	"Bad words Template": "",
+ 	"Bad words filter settings updated successfully": "",
+ 	"Bad words Template": "",
 	"Banners": "Прапори",
 	"Base Model (From)": "Базова модель (від)",
 	"Batch Size (num_batch)": "Розмір партії (num_batch)",
@@ -467,6 +468,7 @@
 	"Remove Model": "Видалити модель",
 	"Rename": "Перейменувати",
 	"Repeat Last N": "Повторити останні N",
+	"Replace bad words Words": "",
 	"Request Mode": "Режим запиту",
 	"Reranking Model": "Модель переранжування",
 	"Reranking model disabled": "Модель переранжування вимкнена",
