--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -73,7 +73,8 @@
 	"Back": "Quay lại",
 	"Bad Response": "Trả lời KHÔNG tốt",
 	"Bad words File": "",
-	"Bad words Template": "",
+ 	"Bad words filter settings updated successfully": "",
+ 	"Bad words Template": "",
 	"Banners": "Biểu ngữ",
 	"Base Model (From)": "Mô hình cơ sở (từ)",
 	"Batch Size (num_batch)": "",
@@ -467,6 +468,7 @@
 	"Remove Model": "Xóa model",
 	"Rename": "Đổi tên",
 	"Repeat Last N": "Repeat Last N",
+	"Replace bad words Words": "",
 	"Request Mode": "Request Mode",
 	"Reranking Model": "Reranking Model",
 	"Reranking model disabled": "Reranking model disabled",
