--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -73,7 +73,8 @@
 	"Back": "Volver",
 	"Bad Response": "Respuesta incorrecta",
 	"Bad words File": "",
-	"Bad words Template": "",
+ 	"Bad words filter settings updated successfully": "",
+ 	"Bad words Template": "",
 	"Banners": "Banners",
 	"Base Model (From)": "Modelo base (desde)",
 	"Batch Size (num_batch)": "Tamaño del Batch (num_batch)",
@@ -467,6 +468,7 @@
 	"Remove Model": "Eliminar modelo",
 	"Rename": "Renombrar",
 	"Repeat Last N": "Repetir las últimas N",
+	"Replace bad words Words": "",
 	"Request Mode": "Modo de petición",
 	"Reranking Model": "Modelo de reranking",
 	"Reranking model disabled": "Modelo de reranking deshabilitado",
