--- a/src/lib/i18n/locales/fi-FI/translation.json
+++ b/src/lib/i18n/locales/fi-FI/translation.json
@@ -73,7 +73,8 @@
 	"Back": "Takaisin",
 	"Bad Response": "Epäkelpo vastaus",
 	"Bad words File": "",
-	"Bad words Template": "",
+ 	"Bad words filter settings updated successfully": "",
+ 	"Bad words Template": "",
 	"Banners": "Bannerit",
 	"Base Model (From)": "Perusmalli (alkaen)",
 	"Batch Size (num_batch)": "",
@@ -467,6 +468,7 @@
 	"Remove Model": "Poista malli",
 	"Rename": "Nimeä uudelleen",
 	"Repeat Last N": "Viimeinen N -toisto",
+	"Replace bad words Words": "",
 	"Request Mode": "Pyyntötila",
 	"Reranking Model": "Uudelleenpisteytysmalli",
 	"Reranking model disabled": "Uudelleenpisteytysmalli poistettu käytöstä",
