--- a/src/lib/i18n/locales/tk-TW/translation.json
+++ b/src/lib/i18n/locales/tk-TW/translation.json
@@ -73,7 +73,8 @@
 	"Back": "",
 	"Bad Response": "",
 	"Bad words File": "",
-	"Bad words Template": "",
+ 	"Bad words filter settings updated successfully": "",
+ 	"Bad words Template": "",
 	"Banners": "",
 	"Base Model (From)": "",
 	"Batch Size (num_batch)": "",
@@ -467,6 +468,7 @@
 	"Remove Model": "",
 	"Rename": "",
 	"Repeat Last N": "",
+	"Replace bad words Words": "",
 	"Request Mode": "",
 	"Reranking Model": "",
 	"Reranking model disabled": "",
