--- a/src/lib/i18n/locales/bg-BG/translation.json
+++ b/src/lib/i18n/locales/bg-BG/translation.json
@@ -73,7 +73,8 @@
 	"Back": "Назад",
 	"Bad Response": "Невалиден отговор от API",
 	"Bad words File": "",
-	"Bad words Template": "",
+ 	"Bad words filter settings updated successfully": "",
+ 	"Bad words Template": "",
 	"Banners": "Банери",
 	"Base Model (From)": "Базов модел (от)",
 	"Batch Size (num_batch)": "",
@@ -461,6 +462,7 @@
 	"Remove Model": "Изтриване на модела",
 	"Rename": "Преименуване",
 	"Repeat Last N": "Repeat Last N",
+	"Replace bad words Words": "",
 	"Request Mode": "Request Mode",
 	"Reranking Model": "Reranking Model",
 	"Reranking model disabled": "Reranking model disabled",
