--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -72,7 +72,8 @@
 	"Back": "Zurück",
 	"Bad Response": "Schlechte Antwort",
 	"Bad words File": "",
-	"Bad words Template": "",
+ 	"Bad words filter settings updated successfully": "",
+ 	"Bad words Template": "",
 	"Banners": "Banner",
 	"Base Model (From)": "Basismodell (von)",
 	"Batch Size (num_batch)": "",
@@ -459,13 +460,14 @@
 	"Remove": "Entfernen",
 	"Remove Model": "Modell entfernen",
 	"Rename": "Umbenennen",
-	"Repeat Last N": "Repeat Last N",
-	"Request Mode": "Request-Modus",
-	"Reranking Model": "Reranking Modell",
-	"Reranking model disabled": "Rranking Modell deaktiviert",
-	"Reranking model set to \"{{reranking_model}}\"": "Reranking Modell auf \"{{reranking_model}}\" gesetzt",
-	"Reset": "",
-	"Reset Upload Directory": "Uploadverzeichnis löschen",
+	"Repeat Last N": "Wiederhole die letzten N",
+	"Replace bad words Words": "",
+	"Request Mode": "Anforderungsmodus",
+	"Reranking Model": "Reranking-Modell",
+	"Reranking model disabled": "Reranking-Modell deaktiviert",
+	"Reranking model set to \"{{reranking_model}}\"": "Reranking-Modell \"{{reranking_model}}\" fesgelegt",
+	"Reset": "Zurücksetzen",
+	"Reset Upload Directory": "Upload-Verzeichnis zurücksetzen",
 	"Reset Vector Storage": "Vektorspeicher zurücksetzen",
 	"Response AutoCopy to Clipboard": "Antwort automatisch in die Zwischenablage kopieren",
 	"Response notifications cannot be activated as the website permissions have been denied. Please visit your browser settings to grant the necessary access.": "",
