--- a/src/lib/i18n/locales/en-GB/translation.json
+++ b/src/lib/i18n/locales/en-GB/translation.json
@@ -71,7 +71,8 @@
 	"Back": "",
 	"Bad Response": "",
 	"Bad words File": "",
-	"Bad words Template": "",
+ 	"Bad words filter settings updated successfully": "",
+ 	"Bad words Template": "",
 	"Banners": "",
 	"Base Model (From)": "",
 	"Batch Size (num_batch)": "",
@@ -459,6 +460,7 @@
 	"Remove Model": "",
 	"Rename": "",
 	"Repeat Last N": "",
+	"Replace bad words Words": "",
 	"Request Mode": "",
 	"Reranking Model": "",
 	"Reranking model disabled": "",
