--- a/src/lib/i18n/locales/fr-CA/translation.json
+++ b/src/lib/i18n/locales/fr-CA/translation.json
@@ -73,7 +73,8 @@
 	"Back": "Retour",
 	"Bad Response": "Mauvaise réponse",
 	"Bad words File": "",
-	"Bad words Template": "",
+ 	"Bad words filter settings updated successfully": "",
+ 	"Bad words Template": "",
 	"Banners": "Banniers",
 	"Base Model (From)": "Modèle de base (à partir de)",
 	"Batch Size (num_batch)": "",
@@ -461,13 +462,14 @@
 	"Remove Model": "Supprimer le modèle",
 	"Rename": "Renommer",
 	"Repeat Last N": "Répéter les N derniers",
-	"Request Mode": "Mode de requête",
-	"Reranking Model": "Modèle de reranking",
-	"Reranking model disabled": "Modèle de reranking désactivé",
-	"Reranking model set to \"{{reranking_model}}\"": "Modèle de reranking défini sur \"{{reranking_model}}\"",
-	"Reset": "",
-	"Reset Upload Directory": "",
-	"Reset Vector Storage": "Réinitialiser le stockage vectoriel",
+	"Replace bad words Words": "",
+	"Request Mode": "Mode de Requête",
+	"Reranking Model": "Modèle de ré-ranking",
+	"Reranking model disabled": "Modèle de ré-ranking désactivé",
+	"Reranking model set to \"{{reranking_model}}\"": "Modèle de ré-ranking défini sur « {{reranking_model}} »",
+	"Reset": "Réinitialiser",
+	"Reset Upload Directory": "Répertoire de téléchargement réinitialisé",
+	"Reset Vector Storage": "Réinitialiser le stockage des vecteurs",
 	"Response AutoCopy to Clipboard": "Copie automatique de la réponse vers le presse-papiers",
 	"Response notifications cannot be activated as the website permissions have been denied. Please visit your browser settings to grant the necessary access.": "",
 	"Role": "Rôle",
