--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -73,7 +73,8 @@
 	"Back": "Retour en arrière",
 	"Bad Response": "Mauvaise réponse",
 	"Bad words File": "",
-	"Bad words Template": "",
+ 	"Bad words filter settings updated successfully": "",
+ 	"Bad words Template": "",
 	"Banners": "Banniers",
 	"Base Model (From)": "Modèle de base (à partir de)",
 	"Batch Size (num_batch)": "Taille du lot (num_batch)",
@@ -460,16 +461,17 @@
 	"Remove": "Retirer",
 	"Remove Model": "Retirer le Modèle",
 	"Rename": "Renommer",
-	"Repeat Last N": "Répéter les Derniers N",
-	"Request Mode": "Mode de Demande",
-	"Reranking Model": "Modèle de Reclassement",
-	"Reranking model disabled": "Modèle de Reclassement Désactivé",
-	"Reranking model set to \"{{reranking_model}}\"": "Modèle de reclassement défini sur \"{{reranking_model}}\"",
-	"Reset": "",
-	"Reset Upload Directory": "",
-	"Reset Vector Storage": "Réinitialiser le Stockage de Vecteur",
-	"Response AutoCopy to Clipboard": "Copie Automatique de la Réponse dans le Presse-papiers",
-	"Response notifications cannot be activated as the website permissions have been denied. Please visit your browser settings to grant the necessary access.": "",
+	"Repeat Last N": "Répéter les N derniers",
+	"Replace bad words Words": "",
+	"Request Mode": "Mode de Requête",
+	"Reranking Model": "Modèle de ré-ranking",
+	"Reranking model disabled": "Modèle de ré-ranking désactivé",
+	"Reranking model set to \"{{reranking_model}}\"": "Modèle de ré-ranking défini sur « {{reranking_model}} »",
+	"Reset": "Réinitialiser",
+	"Reset Upload Directory": "Répertoire de téléchargement réinitialisé",
+	"Reset Vector Storage": "Réinitialiser le stockage des vecteurs",
+	"Response AutoCopy to Clipboard": "Copie automatique de la réponse vers le presse-papiers",
+	"Response notifications cannot be activated as the website permissions have been denied. Please visit your browser settings to grant the necessary access.": "Les notifications de réponse ne peuvent pas être activées car les autorisations du site web ont été refusées. Veuillez visiter les paramètres de votre navigateur pour accorder l'accès nécessaire.",
 	"Role": "Rôle",
 	"Rosé Pine": "Pin Rosé",
 	"Rosé Pine Dawn": "Aube Pin Rosé",
