--- a/src/lib/i18n/locales/he-IL/translation.json
+++ b/src/lib/i18n/locales/he-IL/translation.json
@@ -73,7 +73,8 @@
 	"Back": "חזור",
 	"Bad Response": "תגובה שגויה",
 	"Bad words File": "",
-	"Bad words Template": "",
+ 	"Bad words filter settings updated successfully": "",
+ 	"Bad words Template": "",
 	"Banners": "באנרים",
 	"Base Model (From)": "דגם בסיס (מ)",
 	"Batch Size (num_batch)": "",
@@ -461,6 +462,7 @@
 	"Remove Model": "הסר מודל",
 	"Rename": "שנה שם",
 	"Repeat Last N": "חזור על ה-N האחרונים",
+	"Replace bad words Words": "",
 	"Request Mode": "מצב בקשה",
 	"Reranking Model": "מודל דירוג מחדש",
 	"Reranking model disabled": "מודל דירוג מחדש מושבת",
