--- a/src/lib/i18n/locales/hi-IN/translation.json
+++ b/src/lib/i18n/locales/hi-IN/translation.json
@@ -73,7 +73,8 @@
 	"Back": "पीछे",
 	"Bad Response": "ख़राब प्रतिक्रिया",
 	"Bad words File": "",
-	"Bad words Template": "",
+ 	"Bad words filter settings updated successfully": "",
+ 	"Bad words Template": "",
 	"Banners": "बैनर",
 	"Base Model (From)": "बेस मॉडल (से)",
 	"Batch Size (num_batch)": "",
@@ -461,6 +462,7 @@
 	"Remove Model": "मोडेल हटाएँ",
 	"Rename": "नाम बदलें",
 	"Repeat Last N": "अंतिम N दोहराएँ",
+	"Replace bad words Words": "",
 	"Request Mode": "अनुरोध मोड",
 	"Reranking Model": "रीरैकिंग मोड",
 	"Reranking model disabled": "पुनर्रैंकिंग मॉडल अक्षम किया गया",
