--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -73,7 +73,8 @@
 	"Back": "Kembali",
 	"Bad Response": "Respons Buruk",
 	"Bad words File": "",
-	"Bad words Template": "",
+ 	"Bad words filter settings updated successfully": "",
+ 	"Bad words Template": "",
 	"Banners": "Spanduk",
 	"Base Model (From)": "Model Dasar (Dari)",
 	"Batch Size (num_batch)": "Ukuran Batch (num_batch)",
@@ -461,6 +462,7 @@
 	"Remove Model": "Hapus Model",
 	"Rename": "Ganti nama",
 	"Repeat Last N": "Ulangi N Terakhir",
+	"Replace bad words Words": "",
 	"Request Mode": "Mode Permintaan",
 	"Reranking Model": "Model Pemeringkatan Ulang",
 	"Reranking model disabled": "Model pemeringkatan ulang dinonaktifkan",
