--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -73,7 +73,8 @@
 	"Back": "뒤로가기",
 	"Bad Response": "잘못된 응답",
 	"Bad words File": "",
-	"Bad words Template": "",
+ 	"Bad words filter settings updated successfully": "",
+ 	"Bad words Template": "",
 	"Banners": "배너",
 	"Base Model (From)": "기본 모델(시작)",
 	"Batch Size (num_batch)": "배치 크기 (num_batch)",
@@ -461,6 +462,7 @@
 	"Remove Model": "모델 삭제",
 	"Rename": "이름 변경",
 	"Repeat Last N": "마지막 N 반복",
+	"Replace bad words Words": "",
 	"Request Mode": "요청 모드",
 	"Reranking Model": "Reranking 모델",
 	"Reranking model disabled": "Reranking 모델 비활성화",
