--- a/src/lib/i18n/locales/nl-NL/translation.json
+++ b/src/lib/i18n/locales/nl-NL/translation.json
@@ -73,7 +73,8 @@
 	"Back": "Terug",
 	"Bad Response": "Ongeldig antwoord",
 	"Bad words File": "",
-	"Bad words Template": "",
+ 	"Bad words filter settings updated successfully": "",
+ 	"Bad words Template": "",
 	"Banners": "Banners",
 	"Base Model (From)": "Basismodel (vanaf)",
 	"Batch Size (num_batch)": "",
@@ -461,6 +462,7 @@
 	"Remove Model": "Verwijder Model",
 	"Rename": "Hervatten",
 	"Repeat Last N": "Herhaal Laatste N",
+	"Replace bad words Words": "",
 	"Request Mode": "Request Modus",
 	"Reranking Model": "Reranking Model",
 	"Reranking model disabled": "Reranking model uitgeschakeld",
