--- a/src/lib/i18n/locales/pl-PL/translation.json
+++ b/src/lib/i18n/locales/pl-PL/translation.json
@@ -73,7 +73,8 @@
 	"Back": "Wstecz",
 	"Bad Response": "Zła odpowiedź",
 	"Bad words File": "",
-	"Bad words Template": "",
+ 	"Bad words filter settings updated successfully": "",
+ 	"Bad words Template": "",
 	"Banners": "Banery",
 	"Base Model (From)": "Model podstawowy (od)",
 	"Batch Size (num_batch)": "",
@@ -461,6 +462,7 @@
 	"Remove Model": "Usuń model",
 	"Rename": "ZMień nazwę",
 	"Repeat Last N": "Powtórz ostatnie N",
+	"Replace bad words Words": "",
 	"Request Mode": "Tryb żądania",
 	"Reranking Model": "Zmiana rankingu modelu",
 	"Reranking model disabled": "Zmiana rankingu modelu zablokowana",
