--- a/src/lib/i18n/locales/sr-RS/translation.json
+++ b/src/lib/i18n/locales/sr-RS/translation.json
@@ -73,7 +73,8 @@
 	"Back": "Назад",
 	"Bad Response": "Лош одговор",
 	"Bad words File": "",
-	"Bad words Template": "",
+ 	"Bad words filter settings updated successfully": "",
+ 	"Bad words Template": "",
 	"Banners": "Барјаке",
 	"Base Model (From)": "Основни модел (од)",
 	"Batch Size (num_batch)": "",
@@ -461,6 +462,7 @@
 	"Remove Model": "Уклони модел",
 	"Rename": "Преименуј",
 	"Repeat Last N": "Понови последњих N",
+	"Replace bad words Words": "",
 	"Request Mode": "Режим захтева",
 	"Reranking Model": "Модел поновног рангирања",
 	"Reranking model disabled": "Модел поновног рангирања онемогућен",
