--- a/src/lib/i18n/locales/sv-SE/translation.json
+++ b/src/lib/i18n/locales/sv-SE/translation.json
@@ -73,7 +73,8 @@
 	"Back": "Tillbaka",
 	"Bad Response": "Felaktig respons",
 	"Bad words File": "",
-	"Bad words Template": "",
+ 	"Bad words filter settings updated successfully": "",
+ 	"Bad words Template": "",
 	"Banners": "Banners",
 	"Base Model (From)": "Basmodell (Från)",
 	"Batch Size (num_batch)": "Batchstorlek (num_batch)",
@@ -461,6 +462,7 @@
 	"Remove Model": "Ta bort modell",
 	"Rename": "Byt namn",
 	"Repeat Last N": "Upprepa senaste N",
+	"Replace bad words Words": "",
 	"Request Mode": "Frågeläge",
 	"Reranking Model": "Reranking modell",
 	"Reranking model disabled": "Reranking modell inaktiverad",
