--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -73,7 +73,8 @@
 	"Back": "Geri",
 	"Bad Response": "Kötü Yanıt",
 	"Bad words File": "",
-	"Bad words Template": "",
+ 	"Bad words filter settings updated successfully": "",
+ 	"Bad words Template": "",
 	"Banners": "Afişler",
 	"Base Model (From)": "Temel Model ('den)",
 	"Batch Size (num_batch)": "Yığın Boyutu (num_batch)",
@@ -461,6 +462,7 @@
 	"Remove Model": "Modeli Kaldır",
 	"Rename": "Yeniden Adlandır",
 	"Repeat Last N": "Son N'yi Tekrar Et",
+	"Replace bad words Words": "",
 	"Request Mode": "İstek Modu",
 	"Reranking Model": "Yeniden Sıralama Modeli",
 	"Reranking model disabled": "Yeniden sıralama modeli devre dışı bırakıldı",
