--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -72,8 +72,9 @@
 	"available!": "版本可用！",
 	"Back": "返回",
 	"Bad Response": "点踩此回答",
-	"Bad words File": "不良词汇文件",
-	"Bad words Template": "不良词汇例子",
+	"Bad words File": "过滤不良词汇文件",
+	"Bad words filter settings updated successfully": "过滤不良词汇设置更新成功",
+	"Bad words Template": "过滤不良词汇模板",
 	"Banners": "公告横幅",
 	"Base Model (From)": "基础模型 (来自)",
 	"Batch Size (num_batch)": "批大小 (num_batch)",
@@ -461,6 +462,7 @@
 	"Remove Model": "移除模型",
 	"Rename": "重命名",
 	"Repeat Last N": "重复最后 N 次",
+	"Replace bad words Words": "",
 	"Request Mode": "请求模式",
 	"Reranking Model": "重排模型",
 	"Reranking model disabled": "重排模型已禁用",
