--- a/src/lib/i18n/locales/zh-TW/translation.json
+++ b/src/lib/i18n/locales/zh-TW/translation.json
@@ -73,7 +73,8 @@
 	"Back": "返回",
 	"Bad Response": "錯誤回應",
 	"Bad words File": "",
-	"Bad words Template": "",
+ 	"Bad words filter settings updated successfully": "",
+ 	"Bad words Template": "",
 	"Banners": "橫幅",
 	"Base Model (From)": "基礎模型（來自）",
 	"Batch Size (num_batch)": "批次大小（num_batch）",
@@ -461,6 +462,7 @@
 	"Remove Model": "移除模型",
 	"Rename": "重新命名",
 	"Repeat Last N": "重複最後 N 次",
+	"Replace bad words Words": "",
 	"Request Mode": "請求模式",
 	"Reranking Model": "重新排序模型",
 	"Reranking model disabled": "重新排序模型已停用",
