--- a/src/lib/i18n/locales/ceb-PH/translation.json
+++ b/src/lib/i18n/locales/ceb-PH/translation.json
@@ -73,7 +73,8 @@
 	"Back": "Balik",
 	"Bad Response": "",
 	"Bad words File": "",
-	"Bad words Template": "",
+ 	"Bad words filter settings updated successfully": "",
+ 	"Bad words Template": "",
 	"Banners": "",
 	"Base Model (From)": "",
 	"Batch Size (num_batch)": "",
@@ -461,6 +462,7 @@
 	"Remove Model": "",
 	"Rename": "",
 	"Repeat Last N": "Balika ang katapusang N",
+	"Replace bad words Words": "",
 	"Request Mode": "Query mode",
 	"Reranking Model": "",
 	"Reranking model disabled": "",
