--- a/src/lib/i18n/locales/dg-DG/translation.json
+++ b/src/lib/i18n/locales/dg-DG/translation.json
@@ -72,7 +72,8 @@
 	"Back": "Back",
 	"Bad Response": "",
 	"Bad words File": "",
-	"Bad words Template": "",
+ 	"Bad words filter settings updated successfully": "",
+ 	"Bad words Template": "",
 	"Banners": "",
 	"Base Model (From)": "",
 	"Batch Size (num_batch)": "",
@@ -460,6 +461,7 @@
 	"Remove Model": "",
 	"Rename": "",
 	"Repeat Last N": "Repeat Last N",
+	"Replace bad words Words": "",
 	"Request Mode": "Request Bark",
 	"Reranking Model": "",
 	"Reranking model disabled": "",
