--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -73,7 +73,8 @@
 	"Back": "戻る",
 	"Bad Response": "応答が悪い",
 	"Bad words File": "",
-	"Bad words Template": "",
+ 	"Bad words filter settings updated successfully": "",
+ 	"Bad words Template": "",
 	"Banners": "バナー",
 	"Base Model (From)": "ベースモデル(From)",
 	"Batch Size (num_batch)": "",
@@ -461,6 +462,7 @@
 	"Remove Model": "モデルを削除",
 	"Rename": "名前を変更",
 	"Repeat Last N": "最後の N を繰り返す",
+	"Replace bad words Words": "",
 	"Request Mode": "リクエストモード",
 	"Reranking Model": "モデルの再ランキング",
 	"Reranking model disabled": "再ランキングモデルが無効です",
