--- a/src/lib/i18n/locales/nb-NO/translation.json
+++ b/src/lib/i18n/locales/nb-NO/translation.json
@@ -73,7 +73,8 @@
 	"Back": "Tilbake",
 	"Bad Response": "Dårlig svar",
 	"Bad words File": "",
-	"Bad words Template": "",
+ 	"Bad words filter settings updated successfully": "",
+ 	"Bad words Template": "",
 	"Banners": "Bannere",
 	"Base Model (From)": "Grunnmodell (Fra)",
 	"Batch Size (num_batch)": "",
@@ -461,6 +462,7 @@
 	"Remove Model": "Fjern modell",
 	"Rename": "Gi nytt navn",
 	"Repeat Last N": "Gjenta siste N",
+	"Replace bad words Words": "",
 	"Request Mode": "Forespørselsmodus",
 	"Reranking Model": "Reranking-modell",
 	"Reranking model disabled": "Reranking-modell deaktivert",
