--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -73,8 +73,8 @@
 	"Back": "Retour en arrière",
 	"Bad Response": "Mauvaise réponse",
 	"Bad words File": "",
- 	"Bad words filter settings updated successfully": "",
- 	"Bad words Template": "",
+	"Bad words filter settings updated successfully": "",
+	"Bad words Template": "",
 	"Banners": "Banniers",
 	"Base Model (From)": "Modèle de base (à partir de)",
 	"Batch Size (num_batch)": "Taille du lot (num_batch)",
@@ -643,7 +643,7 @@
 	"User Permissions": "Permissions utilisateur",
 	"Users": "Utilisateurs",
 	"Utilize": "Utilisez",
-	"Valid time units:": "Unités de temps valides :",
+	"Valid time units:": "Unités de temps valides\u00a0:",
 	"Valves": "Vannes",
 	"Valves updated": "Vannes mises à jour",
 	"Valves updated successfully": "Les vannes ont été mises à jour avec succès",
