--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -133,7 +133,7 @@
 	"Context Length": "Longueur du contexte",
 	"Continue Response": "Continuer la réponse",
 	"Continue with {{provider}}": "Continuer avec {{provider}}",
-	"Copied shared chat URL to clipboard!": "URL du chat copiée dans le presse-papiers !",
+	"Copied shared chat URL to clipboard!": "URL du chat copiée dans le presse-papiers\u00a0!",
 	"Copy": "Copie",
 	"Copy last code block": "Copier le dernier bloc de code",
 	"Copy last response": "Copier la dernière réponse",
@@ -240,6 +240,7 @@
 	"Enter Serpstack API Key": "Entrez la clé API Serpstack",
 	"Enter stop sequence": "Entrez la séquence d'arrêt",
 	"Enter Tavily API Key": "Entrez la clé API Tavily",
+	"Enter Tika Server URL": "",
 	"Enter Top K": "Entrez les Top K",
 	"Enter URL (e.g. http://127.0.0.1:7860/)": "Entrez l'URL (par ex. {http://127.0.0.1:7860/})",
 	"Enter URL (e.g. http://localhost:11434)": "Entrez l'URL (par ex. http://localhost:11434)",
@@ -556,7 +557,7 @@
 	"Sign up": "Inscrivez-vous",
 	"Signing in": "Connexion en cours",
 	"Source": "Source",
-	"Speech recognition error: {{error}}": "Erreur de reconnaissance vocale : {{error}}",
+	"Speech recognition error: {{error}}": "Erreur de reconnaissance vocale\u00a0: {{error}}",
 	"Speech-to-Text Engine": "Moteur de reconnaissance vocale",
 	"Stop Sequence": "Séquence d'arrêt",
 	"STT Model": "Modèle de STT",
@@ -578,18 +579,18 @@
 	"Text-to-Speech Engine": "Moteur de synthèse vocale",
 	"Tfs Z": "Tfs Z",
 	"Thanks for your feedback!": "Merci pour vos commentaires !",
-	"The score should be a value between 0.0 (0%) and 1.0 (100%).": "Le score doit être une valeur comprise entre 0,0 (0 %) et 1,0 (100 %).",
+	"The score should be a value between 0.0 (0%) and 1.0 (100%).": "Le score doit être une valeur comprise entre 0,0 (0\u00a0%) et 1,0 (100\u00a0%).",
 	"Theme": "Thème",
 	"Thinking...": "En train de réfléchir...",
 	"This action cannot be undone. Do you wish to continue?": "Cette action ne peut pas être annulée. Souhaitez-vous continuer ?",
 	"This ensures that your valuable conversations are securely saved to your backend database. Thank you!": "Cela garantit que vos conversations précieuses soient sauvegardées en toute sécurité dans votre base de données backend. Merci !",
 	"This is an experimental feature, it may not function as expected and is subject to change at any time.": "Il s'agit d'une fonctionnalité expérimentale, elle peut ne pas fonctionner comme prévu et est sujette à modification à tout moment.",
 	"This setting does not sync across browsers or devices.": "Ce paramètre ne se synchronise pas entre les navigateurs ou les appareils.",
-	"Tika": "Tika",
-	"Tika Server URL required.": "URL du serveur Tika requise.",
 	"This will delete": "Cela supprimera",
 	"Thorough explanation": "Explication approfondie",
-	"Tip: Update multiple variable slots consecutively by pressing the tab key in the chat input after each replacement.": "Conseil : mettez à jour plusieurs emplacements de variables consécutivement en appuyant sur la touche Tab dans l’entrée de chat après chaque remplacement.",
+	"Tika": "Tika",
+	"Tika Server URL required.": "URL du serveur Tika requise.",
+	"Tip: Update multiple variable slots consecutively by pressing the tab key in the chat input after each replacement.": "Conseil\u00a0: mettez à jour plusieurs emplacements de variables consécutivement en appuyant sur la touche Tab dans l’entrée de chat après chaque remplacement.",
 	"Title": "Titre",
 	"Title (e.g. Tell me a fun fact)": "Titre (par ex. raconte-moi un fait amusant)",
 	"Title Auto-Generation": "Génération automatique de titres",
@@ -623,6 +624,7 @@
 	"Uh-oh! There was an issue connecting to {{provider}}.": "Oh non ! Un problème est survenu lors de la connexion à {{provider}}.",
 	"UI": "Interface utilisateur",
 	"Unknown file type '{{file_type}}'. Proceeding with the file upload anyway.": "Type de fichier inconnu '{{file_type}}'. Continuons tout de même le téléchargement du fichier.",
+	"Unpin": "",
 	"Update": "Mise à jour",
 	"Update and Copy Link": "Mettre à jour et copier le lien",
 	"Update password": "Mettre à jour le mot de passe",
@@ -680,4 +682,4 @@
 	"Your account status is currently pending activation.": "Votre statut de compte est actuellement en attente d'activation.",
 	"Youtube": "YouTube",
 	"Youtube Loader Settings": "Paramètres de l'outil de téléchargement YouTube"
-  }
+}
