--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -72,9 +72,9 @@
 	"available!": "版本可用！",
 	"Back": "返回",
 	"Bad Response": "点踩此回答",
-	"Bad words File": "过滤不良词汇文件",
-	"Bad words filter settings updated successfully": "过滤不良词汇设置更新成功",
-	"Bad words Template": "过滤不良词汇模板",
+	"Bad words File": "过滤敏感词文件",
+	"Bad words filter settings updated successfully": "过滤敏感词置更新成功",
+	"Bad words Template": "过滤敏感词模板",
 	"Banners": "公告横幅",
 	"Base Model (From)": "基础模型 (来自)",
 	"Batch Size (num_batch)": "批大小 (num_batch)",
@@ -213,7 +213,7 @@
 	"Embedding model set to \"{{embedding_model}}\"": "语义向量模型设置为 \"{{embedding_model}}\"",
 	"Enable Chat History": "启用对话历史记录",
 	"Enable Community Sharing": "启用分享至社区",
-	"Enable message bad Words replacement": "启用消息中不良词汇替换",
+	"Enable message bad Words replacement": "启用消息中敏感词替换",
 	"Enable Message Filter": "启用消息过滤器",
 	"Enable New Sign Ups": "允许新用户注册",
 	"Enable Web Search": "启用网络搜索",
@@ -462,7 +462,7 @@
 	"Remove Model": "移除模型",
 	"Rename": "重命名",
 	"Repeat Last N": "重复最后 N 次",
-	"Replace bad words Words": "",
+	"Replace bad words Words": "替换敏感词",
 	"Request Mode": "请求模式",
 	"Reranking Model": "重排模型",
 	"Reranking model disabled": "重排模型已禁用",
