--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -214,6 +214,7 @@
 	"Embedding Model": "语义向量模型",
 	"Embedding Model Engine": "语义向量模型引擎",
 	"Embedding model set to \"{{embedding_model}}\"": "语义向量模型设置为 \"{{embedding_model}}\"",
+	"Enable File-Update Base64" : "启用Base64上传文件",
 	"Enable Chat History": "启用对话历史记录",
 	"Enable Community Sharing": "启用分享至社区",
 	"Enable message bad Words replacement": "启用消息中敏感词替换",
