👀 添加开启base64的按钮

--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -214,9 +214,10 @@
 	"Embedding Model": "语义向量模型",
 	"Embedding Model Engine": "语义向量模型引擎",
 	"Embedding model set to \"{{embedding_model}}\"": "语义向量模型设置为 \"{{embedding_model}}\"",
-	"Enable File-Update Base64" : "启用Base64上传文件",
+	"Enable Base64": "允许启用Base64上传文件模式",
 	"Enable Chat History": "启用对话历史记录",
 	"Enable Community Sharing": "启用分享至社区",
+	"Enable File-Update Base64" : "启用Base64上传文件",
 	"Enable message bad Words replacement": "启用消息中敏感词替换",
 	"Enable Message Filter": "启用消息过滤器",
 	"Enable New Sign Ups": "允许新用户注册",
