--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -446,6 +446,7 @@
 	"Pipelines Not Detected": "未检测到 Pipeline",
 	"Pipelines Valves": "Pipeline 值",
 	"Plain text (.txt)": "TXT 文档 (.txt)",
+	"Plain markdown (.md)": "MD 文档 (.md)",
 	"Playground": "AI 对话游乐场",
 	"Positive attitude": "积极的态度",
 	"Previous 30 days": "过去 30 天",
