--- a/src/lib/i18n/locales/zh-TW/translation.json
+++ b/src/lib/i18n/locales/zh-TW/translation.json
@@ -446,6 +446,7 @@
 	"Pipelines Not Detected": "",
 	"Pipelines Valves": "管線閥門",
 	"Plain text (.txt)": "純文字 (.txt)",
+	"Plain markdown (.md)": "純 Markdown (.md)",
 	"Playground": "AI 對話遊樂場",
 	"Positive attitude": "積極態度",
 	"Previous 30 days": "前 30 天",
