--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -180,7 +180,7 @@
 	"Deleted {{name}}": "已删除 {{name}}",
 	"Description": "描述",
 	"Didn't fully follow instructions": "没有完全遵照指示",
-	"Disabled": "",
+	"Disabled": "禁用",
 	"Discover a function": "发现更多函数",
 	"Discover a model": "发现更多模型",
 	"Discover a prompt": "发现更多提示词",
@@ -192,8 +192,8 @@
 	"Dismissible": "是否可关闭",
 	"Display Emoji in Call": "在通话中显示 Emoji 表情符号",
 	"Display the username instead of You in the Chat": "在对话中显示用户名而不是“你”",
-	"Do not install functions from sources you do not fully trust.": "",
-	"Do not install tools from sources you do not fully trust.": "",
+	"Do not install functions from sources you do not fully trust.": "不要从您不完全信任的来源安装函数。",
+	"Do not install tools from sources you do not fully trust.": "不要从不完全信任的来源安装工具。",
 	"Document": "文档",
 	"Document Settings": "文档设置",
 	"Documentation": "帮助文档",
@@ -201,8 +201,8 @@
 	"does not make any external connections, and your data stays securely on your locally hosted server.": "不会与外部建立任何连接，您的数据会安全地存储在本地托管的服务器上。",
 	"Don't Allow": "不允许",
 	"Don't have an account?": "没有账号？",
-	"don't install random functions from sources you don't trust.": "",
-	"don't install random tools from sources you don't trust.": "",
+	"don't install random functions from sources you don't trust.": "不要从您不信任的来源安装随机函数。",
+	"don't install random tools from sources you don't trust.": "不要从您不信任的来源安装随机工具。",
 	"Don't like the style": "不喜欢这个文风",
 	"Done": "完成",
 	"Download": "下载",
@@ -222,12 +222,12 @@
 	"Enable Base64": "允许启用Base64上传文件模式",
 	"Enable Chat History": "启用对话历史记录",
 	"Enable Community Sharing": "启用分享至社区",
-	"Enable File-Update Base64" : "启用Base64上传文件",
+	"Enable File-Update Base64": "启用Base64上传文件",
 	"Enable message bad Words replacement": "启用消息中敏感词替换",
 	"Enable Message Filter": "启用消息过滤器",
 	"Enable New Sign Ups": "允许新用户注册",
 	"Enable Web Search": "启用网络搜索",
-	"Enabled": "",
+	"Enabled": "启用",
 	"Engine": "引擎",
 	"Ensure your CSV file includes 4 columns in this order: Name, Email, Password, Role.": "确保您的 CSV 文件按以下顺序包含 4 列： 姓名、电子邮箱、密码、角色。",
 	"Enter {{role}} message here": "在此处输入 {{role}} 信息",
@@ -295,22 +295,22 @@
 	"Frequency Penalty": "频率惩罚",
 	"Function created successfully": "函数创建成功",
 	"Function deleted successfully": "函数删除成功",
-	"Function Description (e.g. A filter to remove profanity from text)": "",
-	"Function ID (e.g. my_filter)": "",
+	"Function Description (e.g. A filter to remove profanity from text)": "功能描述（例如，用于从文本中删除亵渎性的过滤器）",
+	"Function ID (e.g. my_filter)": "功能 ID（例如 my_filter）",
 	"Function is now globally disabled": "函数全局已禁用",
 	"Function is now globally enabled": "函数全局已启用",
-	"Function Name (e.g. My Filter)": "",
+	"Function Name (e.g. My Filter)": "函数名称（例如：我的过滤器）",
 	"Function updated successfully": "函数更新成功",
 	"Functions": "函数",
-	"Functions allow arbitrary code execution": "",
-	"Functions allow arbitrary code execution.": "",
+	"Functions allow arbitrary code execution": "函数允许执行任意代码",
+	"Functions allow arbitrary code execution.": "函数允许执行任意代码。",
 	"Functions imported successfully": "函数导入成功",
 	"General": "通用",
 	"General Settings": "通用设置",
 	"Generate Image": "生成图像",
 	"Generating search query": "生成搜索查询",
 	"Generation Info": "生成信息",
-	"Get up and running with": "",
+	"Get up and running with": "启动并运行",
 	"Global": "全局",
 	"Good Response": "点赞此回答",
 	"Google PSE API Key": "Google PSE API 密钥",
@@ -323,7 +323,7 @@
 	"Hide Model": "隐藏",
 	"How can I help you today?": "有什么我能帮您的吗？",
 	"Hybrid Search": "混合搜索",
-	"I acknowledge that I have read and I understand the implications of my action. I am aware of the risks associated with executing arbitrary code and I have verified the trustworthiness of the source.": "",
+	"I acknowledge that I have read and I understand the implications of my action. I am aware of the risks associated with executing arbitrary code and I have verified the trustworthiness of the source.": "我承认我已经阅读并理解我的行为的影响。我知道与执行任意代码相关的风险，并且我已经验证了源的可信度。",
 	"Image Generation (Experimental)": "图像生成（实验性）",
 	"Image Generation Engine": "图像生成引擎",
 	"Image Settings": "图像设置",
@@ -354,7 +354,7 @@
 	"Keyboard shortcuts": "键盘快捷键",
 	"Knowledge": "知识库",
 	"Language": "语言",
-	"large language models, locally.": "",
+	"large language models, locally.": "大型语言模型，本地。",
 	"Last Active": "最后在线时间",
 	"Last Modified": "最后修改时间",
 	"Light": "浅色",
@@ -467,7 +467,7 @@
 	"Plain text (.txt)": "TXT 文档 (.txt)",
 	"Plain markdown (.md)": "MD 文档 (.md)",
 	"Playground": "AI 对话游乐场",
-	"Please carefully review the following warnings:": "",
+	"Please carefully review the following warnings:": "请仔细阅读以下警告：",
 	"Positive attitude": "积极的态度",
 	"Previous 30 days": "过去 30 天",
 	"Previous 7 days": "过去 7 天",
@@ -506,7 +506,7 @@
 	"Rosé Pine": "玫瑰紫",
 	"Rosé Pine Dawn": "玫瑰粉",
 	"RTL": "从右至左",
-	"Run Llama 2, Code Llama, and other models. Customize and create your own.": "",
+	"Run Llama 2, Code Llama, and other models. Customize and create your own.": "运行 Llama 2、Code Llama 和其他模型。自定义并创建您自己的。",
 	"Running": "运行中",
 	"Save": "保存",
 	"Save & Create": "保存并创建",
@@ -590,8 +590,8 @@
 	"Success": "成功",
 	"Successfully updated.": "成功更新。",
 	"Suggested": "建议",
-	"Support": "",
-	"Support this plugin:": "",
+	"Support": "支持",
+	"Support this plugin:": "支持此插件：",
 	"System": "系统",
 	"System Prompt": "系统提示词 (System Prompt)",
 	"Tags": "标签",
@@ -604,7 +604,7 @@
 	"Text-to-Speech Engine": "文本转语音引擎",
 	"Tfs Z": "Tfs Z",
 	"Thanks for your feedback!": "感谢您的反馈！",
-	"The developers behind this plugin are passionate volunteers from the community. If you find this plugin helpful, please consider contributing to its development.": "",
+	"The developers behind this plugin are passionate volunteers from the community. If you find this plugin helpful, please consider contributing to its development.": "这个插件背后的开发人员是来自社区的热情志愿者。如果您觉得这个插件有帮助，请考虑为其开发做出贡献。",
 	"The score should be a value between 0.0 (0%) and 1.0 (100%).": "分值应介于 0.0（0%）和 1.0（100%）之间。",
 	"Theme": "主题",
 	"Thinking...": "正在思考...",
@@ -638,13 +638,13 @@
 	"Tool deleted successfully": "工具删除成功",
 	"Tool imported successfully": "工具导入成功",
 	"Tool updated successfully": "工具更新成功",
-	"Toolkit Description (e.g. A toolkit for performing various operations)": "",
-	"Toolkit ID (e.g. my_toolkit)": "",
-	"Toolkit Name (e.g. My ToolKit)": "",
+	"Toolkit Description (e.g. A toolkit for performing various operations)": "工具包描述（例如，用于执行各种操作的工具包）",
+	"Toolkit ID (e.g. my_toolkit)": "工具包 ID（例如 my_toolkit）",
+	"Toolkit Name (e.g. My ToolKit)": "工具包名称（例如我的工具包）",
 	"Tools": "工具",
-	"Tools are a function calling system with arbitrary code execution": "",
-	"Tools have a function calling system that allows arbitrary code execution": "",
-	"Tools have a function calling system that allows arbitrary code execution.": "",
+	"Tools are a function calling system with arbitrary code execution": "工具是一个函数调用系统，具有任意代码执行功能",
+	"Tools have a function calling system that allows arbitrary code execution": "工具有一个函数调用系统，允许任意代码执行",
+	"Tools have a function calling system that allows arbitrary code execution.": "工具有一个函数调用系统，允许任意代码执行。",
 	"Top K": "Top K",
 	"Top P": "Top P",
 	"Trouble accessing Ollama?": "访问 Ollama 时遇到问题？",
@@ -686,7 +686,7 @@
 	"Version": "版本",
 	"Voice": "语音",
 	"Warning": "警告",
-	"Warning:": "",
+	"Warning:": "警告：",
 	"Warning: If you update or change your embedding model, you will need to re-import all documents.": "警告：如果您修改了语义向量模型，则需要重新导入所有文档。",
 	"Web": "网页",
 	"Web API": "网页 API",
@@ -714,7 +714,7 @@
 	"You're a helpful assistant.": "你是一个有帮助的助手。",
 	"You're now logged in.": "已登录。",
 	"Your account status is currently pending activation.": "您的账号当前状态为待激活。",
-	"Your entire contribution will go directly to the plugin developer; Open WebUI does not take any percentage. However, the chosen funding platform might have its own fees.": "",
+	"Your entire contribution will go directly to the plugin developer; Open WebUI does not take any percentage. However, the chosen funding platform might have its own fees.": "您的全部贡献将直接归插件开发人员所有;Open WebUI 不收取任何百分比。但是，所选的融资平台可能有自己的费用。",
 	"Youtube": "YouTube",
 	"Youtube Loader Settings": "YouTube 爬取设置"
 }
